--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "openai": "^4.85.2",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "puppeteer": "^24.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
